Chapter17/kubernetes/services/base/ingress-edge-server-ngrok.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: edge-ngrok
  annotations:
    certmanager.k8s.io/issuer: "letsencrypt-issuer-staging"
spec:
  tls:
  - hosts:
    - 2e22d2f81e49.ngrok.io
    secretName: tls-ngrok-letsencrypt-certificate
  rules:
  - host: 2e22d2f81e49.ngrok.io
    http:
      paths:
      - path: /oauth
        pathType: Prefix
        backend:
          service:
            name: auth-server
            port:
              number: 80
      - path: /product-composite
        pathType: Prefix
        backend:
          service:
            name: product-composite
            port:
              number: 80
      - path: /actuator/health
        pathType: Prefix
        backend:
          service:
            name: product-composite
            port:
              number: 80
